Fri Dec 14 04:42:34 GMT 2012  Olly Betts <olly@survex.com>

	* md5wrap.cc: If we get a read error while calculating the md5 checksum
	  of a file, fail rather than returning the checksum of the file up to
	  that point.

Fri Dec 14 04:35:52 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Calculate the md5 from the loaded file contents when
	  indexing SVG and Atom files.  Use a const ref to avoid a string
	  copy of the file contents for HTML and uncompressed ABI word.

Fri Dec 14 04:24:17 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac,diritor.cc,diritor.h,loadfile.cc,loadfile.h,omindex.cc:
	  If we open a file to index it, keep the fd around and use it with
	  libmagic, provided magic_descriptor() is available.

Tue Dec 11 03:35:29 GMT 2012  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h,omindex.cc: If we get ENOENT for a file or
	  directory we're trying to index, assume it has been removed between
	  us reading the directory entry for it and trying to open it, and
	  only report the failure to index under --verbose.

Wed Nov 21 04:06:54 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Fix omindex not to segfault when -F option without a ':'
	  is passed.

Tue Sep 25 23:57:12 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,omindex.cc: Replace shell_protect() with
	  append_filename_argument() from common/append_filename_arg.h.
	  Extracting text using external filters now works for filenames
	  containing a newline character.

Thu Aug 09 20:07:59 GMT 2012  Dan Colish <dcolish@gmail.com>

	* Makefile.am,configure.ac: Allow users to configure with
	  MAGIC_PREFIX for non-standard installs of libmagic

Wed Jul 18 10:51:39 GMT 2012  Olly Betts <olly@survex.com>

	* urldecode.h: Fix to decode escaped character at the end of the
	  string.
	* urlenctest.cc: Add regression testcase.

Sun Jul 01 10:53:35 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.
